# Mlops_Kedro

./: .pre-commit-config.yaml  cloudbuild.yaml  install.sh  pyproject.toml
conf/base/: catalog.yml  parameters.yml
mlflow/: mlflow_read.py  test_mlflow_connection.py  train_mlflow.py
notebooks/: post_training_tests.ipynb
src/purchase_predict/: __main__.py
src/purchase_predict/pipelines/deployment/: __init__.py  nodes.py  pipeline.py
src/purchase_predict/pipelines/loading/: nodes.py  pipeline.py
src/purchase_predict/pipelines/processing/: nodes.py  pipeline.py
src/purchase_predict/pipelines/training/: __init__.py  nodes.py  pipeline.py
tests/pipelines/loading/: conftest.py  test_nodes.py  test_pipeline.py
tests/pipelines/processing/: conftest.py  test_nodes.py  test_pipeline.py
